--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400&family=Orbitron&display=swap"
       rel="stylesheet"
     />
-    <title>Express Example</title>
+    <title>Main Controller</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -24,6 +24,10 @@
         <div class="tempDegree" id="tempDisplay">22</div>
         <button id="increment" onclick="changeTemp(1)">▲</button>
       </div>
+      <!-- <div class="icon">
+        <img src="./hwave.webp" />
+        <img src="./cwave.gif" />
+      </div> -->
     </div>
     <div class="light-door">
       <div class="title">Lights</div>
